--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
     ],
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2",
+        "askedio/laravel-soft-cascade": "^6.0",
         "barryvdh/laravel-ide-helper": "^2.5",
-        "laravel/lumen-framework": "5.7.*",
+        "doctrine/dbal": "^2.9",
+        "laravel/lumen-framework": "^6.0",
         "tymon/jwt-auth": "^1.0@dev",
-        "vlucas/phpdotenv": "~2.2",
-        "wn/lumen-generators": "^1.3"
+        "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
