--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "phpunit/phpunit": "~7.0",
-        "mockery/mockery": "~1.0"
+        "fakerphp/faker": "^1.9.1",
+        "phpunit/phpunit": "^9.3",
+        "mockery/mockery": "^1.3.1"
     },
     "autoload": {
         "classmap": [
