--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,21 @@
-APP_ENV=local
+PP_ENV=local
 APP_DEBUG=true
 APP_KEY=
-APP_TIMEZONE=UTC
+APP_TIMEZONE=America/Lima
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=security-db
 DB_PORT=3306
-DB_DATABASE=tele_security
+DB_DATABASE=my_dbs_security
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=my_dbs_security
+
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 
 JWT_SECRET=PKIUwLJBKVQtW9msLF1kpg0xnigi6zi2
+JWT_TTL=600000
