--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,19 @@ APP_TIMEZONE=America/Lima
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysql
-DB_HOST=security-db
-DB_PORT=3306
-DB_DATABASE=my_dbs_security
-DB_USERNAME=root
-DB_PASSWORD=my_dbs_security
+DB_CONNECTION=sqlsrv
+DB_HOST=10.10.22.2
+DB_PORT=1433
+DB_DATABASE=my_security
+DB_USERNAME=mysim_adm_sec
+DB_PASSWORD=D0ck3rsMys4c23*
 
+DB_MYSQL_CONNECTION=mysql
+DB_MYSQL_HOST=security-db
+DB_MYSQL_PORT=3306
+DB_MYSQL_DATABASE=my_dbs_security
+DB_MYSQL_USERNAME=root
+DB_MYSQL_PASSWORD=my_dbs_security
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
